# BibopBot

./: .gitignore  .replit  README.md  config.py  main.py  pyproject.toml  requisitos.txt  transbot-api-457319-109028959201.json
modules/: help.py  recording.py  transcription.py
utils/: audio_processing.py  file_management.py  file_managment.py
