[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "python-dotenv>=1.1.0",
    "google-cloud-speech>=2.21.0",
    "speechrecognition>=3.10.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.2.5",
    "pynacl>=1.5.0",
]
